# VIL

./: .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE-v0.4.0.md  ROADMAP.md  SECURITY.md  deny.toml
.github/workflows/: bench-gate.yml  ci.yml  osv-scan.yml
benchmarks/baselines/: expr_eval.json  workflow_exec.json
crates/vil/src/: lib.rs
crates/vil_anomaly/src/: lib.rs
crates/vil_capsule/src/: bridge.rs
crates/vil_cli/src/: codegen.rs  deploy.rs  dev_mode.rs  main.rs  orm_cmd.rs  project_init.rs  provision.rs  provision_prepare.rs  runner.rs
crates/vil_cli_compile/src/: call_resolver.rs  codegen.rs  compiler.rs  gen_scaffold.rs  lib.rs
crates/vil_cli_core/src/: lib.rs
crates/vil_cli_pipeline/src/: checker.rs  dashboard.rs  lib.rs  test_runner.rs  viz_bridge.rs  yaml_pipeline.rs
crates/vil_cli_sdk/src/: lib.rs  wasm_builder.rs
crates/vil_cli_server/src/: generate.rs  lib.rs
crates/vil_crypto/src/: lib.rs
crates/vil_datefmt/src/: lib.rs
crates/vil_db_cassandra/: Cargo.toml
crates/vil_db_cassandra/tests/: integration.rs  unit.rs
crates/vil_db_clickhouse/: Cargo.toml
crates/vil_db_clickhouse/tests/: integration.rs  unit.rs
crates/vil_db_dynamodb/: Cargo.toml
crates/vil_db_dynamodb/tests/: integration.rs  unit.rs
crates/vil_db_elastic/: Cargo.toml
crates/vil_db_elastic/tests/: integration.rs  unit.rs
crates/vil_db_mongo/: Cargo.toml
crates/vil_db_mongo/tests/: integration.rs  unit.rs
crates/vil_db_neo4j/: Cargo.toml
crates/vil_db_neo4j/tests/: integration.rs  unit.rs
crates/vil_db_redis/tests/: unit.rs
crates/vil_db_sea_orm/tests/: unit.rs
crates/vil_db_sqlx/src/: metrics.rs  pool.rs
crates/vil_db_sqlx/tests/: unit.rs
crates/vil_db_timeseries/: Cargo.toml
crates/vil_db_timeseries/tests/: unit.rs
crates/vil_duration/src/: lib.rs
crates/vil_email/src/: lib.rs
crates/vil_expr/: Cargo.toml
crates/vil_expr/benches/: expr_eval.rs
crates/vil_expr/src/: ast.rs  eval.rs  lib.rs  parser.rs  token.rs
crates/vil_hash/src/: lib.rs
crates/vil_id_gen/src/: lib.rs
crates/vil_jwt/src/: lib.rs
crates/vil_log/src/: dict.rs  resolve.rs
crates/vil_mask/src/: lib.rs
crates/vil_migrate/src/: lib.rs
crates/vil_mq_pubsub/: Cargo.toml
crates/vil_mq_pubsub/tests/: integration.rs  unit.rs
crates/vil_mq_pulsar/: Cargo.toml
crates/vil_mq_pulsar/tests/: integration.rs  unit.rs
crates/vil_mq_rabbitmq/: Cargo.toml
crates/vil_mq_rabbitmq/tests/: integration.rs  unit.rs
crates/vil_mq_sqs/: Cargo.toml
crates/vil_mq_sqs/tests/: integration.rs  unit.rs
crates/vil_new_http/src/: lib.rs  request.rs  sink.rs  source.rs
crates/vil_obs/src/: latency.rs
crates/vil_observer/src/: api.rs  metrics.rs
crates/vil_orm/src/: lib.rs  log.rs  pagination.rs  query.rs
crates/vil_orm_derive/src/: lib.rs
crates/vil_parse_csv/src/: lib.rs
crates/vil_parse_xml/src/: lib.rs
crates/vil_plugin_sdk/src/: lib.rs
crates/vil_queue/src/: spsc.rs
crates/vil_regex/src/: lib.rs
crates/vil_registry/src/: registry.rs  shm_registry.rs
crates/vil_rt/src/: session.rs
crates/vil_rules/src/: lib.rs
crates/vil_server_auth/src/: claims.rs  jwt_full.rs  lib.rs
crates/vil_server_core/src/: coalescing.rs  diagnostics.rs  error_tracker.rs  http_client.rs  lib.rs  obs_middleware.rs  otel.rs  plugin_manager.rs  request_log.rs  response.rs  server.rs  shm_pool.rs  trace_middleware.rs  upload.rs  upstream_metrics.rs  websocket.rs
crates/vil_server_macros/src/: lib.rs
crates/vil_server_provision/src/: main.rs
crates/vil_shm/src/: heap.rs
crates/vil_sidecar/src/: bridge.rs  lifecycle.rs  metrics.rs
crates/vil_starlark/: Cargo.toml
crates/vil_starlark/benches/: starlark_bridge.rs
crates/vil_starlark/src/: lib.rs
crates/vil_stats/src/: lib.rs
crates/vil_storage_s3/src/: client.rs
crates/vil_template/src/: lib.rs
crates/vil_trigger_db_poll/src/: lib.rs
crates/vil_trigger_s3/src/: lib.rs
crates/vil_trigger_sftp/src/: lib.rs
crates/vil_validate_derive/src/: lib.rs
crates/vil_validate_schema/src/: lib.rs
crates/vil_vwfd/: Cargo.toml
crates/vil_vwfd/benches/: workflow_exec.rs
crates/vil_vwfd/src/: app.rs  audit.rs  cli.rs  compiler.rs  durability.rs  eval_bridge.rs  executor.rs  graph.rs  handler.rs  handler_provision.rs  lib.rs  loader.rs  manifests.rs  plugin_loader.rs  process.rs  provision.rs  provision_admin.rs  registry.rs  saga.rs  spec.rs  spv1.rs  triggers.rs
crates/vil_vwfd/src/mcp/: mod.rs  protocol.rs  resources.rs  tools.rs
crates/vil_vwfd/tests/: h5_runtime_parity.rs  integration.rs
crates/vil_vwfd_macros/src/: codegen.rs  lib.rs  parser.rs
crates/vil_webhook_out/src/: lib.rs
docs/: ARCHITECTURE_OVERVIEW.md  GOOD_FIRST_ISSUES.md  INDEX.md  INSTALLATION.md  benchmark-gate.md  native-toolchain.md
examples/003-basic-hello-server/src/: main.rs
examples/004-basic-rest-crud/src/: main.rs
examples/013-basic-nats-worker/src/: main.rs
examples/014-basic-kafka-stream/src/: main.rs
examples/016-basic-ai-rag-gateway/src/: main.rs
examples/017-basic-production-fullstack/src/: main.rs
examples/018-basic-ai-multi-model-router/src/: main.rs
examples/019-basic-ai-multi-model-advanced/src/: main.rs
examples/021-basic-wasm-faas/src/: main.rs
examples/022-basic-sidecar-python/src/: main.rs
examples/024-basic-llm-chat/src/: main.rs
examples/025-basic-rag-service/src/: main.rs
examples/026-basic-ai-agent/src/: main.rs
examples/029-basic-vil-handler-endpoint/src/: main.rs
examples/030-basic-trilane-messaging/src/: main.rs
examples/038-basic-vil-app-dsl/src/: main.rs
examples/040-basic-auth-middleware-stack/src/: main.rs
examples/041-basic-sidecar-failover/src/: main.rs
examples/042-basic-scripting-sandbox/src/: main.rs
examples/043-basic-integration-test/src/: main.rs
examples/044-basic-graphql-subscriptions/src/: main.rs
llm_knowledge/: index.md
scripts/: bench-gate-release.sh  bench-gate.sh  check-native-toolchain.sh  vflow-compat-external-live.sh  vflow-compat-live-smoke.sh
sdk/: TESTING.md  manifest_smoke.sh
sdk/go/: vil_test.go
(+127 files in other folders)
