# =============================================================================
# VIL Full Source Community Workspace
# =============================================================================
# This is the FULL source code workspace for community adoption.
# ALL crates and examples are exposed - no IP protection.
#
# This workspace contains everything needed to build, run, and extend VIL.
# =============================================================================

[workspace]
resolver = "2"
members = [
    # --- Meta-crate ---
    "crates/vil",
    "crates/vil_validate_derive",
    "crates/vil_migrate",
    "crates/vil_orm_derive",
    "crates/vil_orm",

    # --- Core Runtime ---
    "crates/vil_types",
    "crates/vil_shm",
    "crates/vil_queue",
    "crates/vil_log",
    "crates/vil_registry",
    "crates/vil_rt",
    "crates/vil_obs",
    "crates/vil_net",
    "crates/vil_engine",

    # --- Semantic Compiler ---
    "crates/vil_ir",
    "crates/vil_diag",
    "crates/vil_validate",
    "crates/vil_macros",
    "crates/vil_codegen_rust",
    "crates/vil_codegen_c",

    # --- Visualization ---
    "crates/vil_viz",

    # --- Script Runtimes ---
    "crates/vil_script_lua",
    "crates/vil_script_js",
    # --- Tooling ---
    "crates/vil_cli",
    "crates/vil_cli_core",
    "crates/vil_cli_compile",
    "crates/vil_cli_sdk",
    "crates/vil_cli_pipeline",
    "crates/vil_cli_server",
    "crates/vil_new_http",

    # --- Connector Macros ---
    "crates/vil_connector_macros",

    # --- SDK & Extensions ---
    "crates/vil_sdk",
    "crates/vil_plugin_sdk",
    "crates/vil_topo",
    "crates/vil_capsule",
    "crates/vil_sidecar",
    "crates/vil_observer",

    # --- VIL Server ---
    "crates/vil_server_core",
    "crates/vil_server_web",
    "crates/vil_server_config",
    "crates/vil_server_mesh",
    "crates/vil_server_auth",
    "crates/vil_server_db",
    "crates/vil_server_test",
    "crates/vil_server_macros",
    "crates/vil_server",

    # --- Storage Plugins ---
    "crates/vil_storage_s3",
    "crates/vil_storage_gcs",
    "crates/vil_storage_azure",

    # --- Database Plugins ---
    "crates/vil_db_elastic",
    "crates/vil_db_sqlx",
    "crates/vil_db_sea_orm",
    "crates/vil_db_redis",
    "crates/vil_db_mongo",
    "crates/vil_db_clickhouse",
    "crates/vil_db_dynamodb",
    "crates/vil_db_cassandra",
    "crates/vil_db_timeseries",
    "crates/vil_db_neo4j",

    # --- DB Semantic Layer ---
    "crates/vil_db_semantic",
    "crates/vil_db_macros",
    "crates/vil_cache",

    # --- GraphQL + K8s Operator ---
    "crates/vil_graphql",
    "crates/vil_operator",

    # --- JSON Abstraction ---
    "crates/vil_json",

    # --- Protocol + Serialization ---
    "crates/vil_grpc",
    "crates/vil_server_format",
    "crates/vil_mq_kafka",
    "crates/vil_mq_mqtt",
    "crates/vil_mq_nats",
    "crates/vil_mq_rabbitmq",
    "crates/vil_mq_sqs",
    "crates/vil_mq_pulsar",
    "crates/vil_mq_pubsub",

    # --- Phase 3 Trigger Crates ---
    "crates/vil_trigger_core",
    "crates/vil_trigger_cron",
    "crates/vil_trigger_fs",
    "crates/vil_trigger_cdc",
    "crates/vil_trigger_email",
    "crates/vil_trigger_iot",
    "crates/vil_trigger_evm",
    "crates/vil_trigger_webhook",
    "crates/vil_trigger_kafka",
    "crates/vil_trigger_s3",
    "crates/vil_trigger_sftp",
    "crates/vil_trigger_db_poll",
    "crates/vil_trigger_grpc",

    # --- Built-in FaaS Crates (Phase C) ---
    "crates/vil_hash",
    "crates/vil_crypto",
    "crates/vil_jwt",
    "crates/vil_id_gen",
    "crates/vil_datefmt",
    "crates/vil_duration",
    "crates/vil_parse_csv",
    "crates/vil_parse_xml",
    "crates/vil_regex",
    "crates/vil_phone",
    "crates/vil_validate_schema",
    "crates/vil_mask",
    "crates/vil_reshape",
    "crates/vil_template",
    "crates/vil_email_validate",
    "crates/vil_stats",
    "crates/vil_anomaly",
    "crates/vil_email",
    "crates/vil_webhook_out",
    "crates/vil_geodist",

    # --- FaaS Demo Examples ---
    "examples/901-faas-kyc-onboarding",
    "examples/901-faas-kyc-onboarding/vwfd",
    "examples/902-faas-data-pipeline",
    "examples/902-faas-data-pipeline/vwfd",
    "examples/903-faas-secure-api",
    "examples/903-faas-secure-api/vwfd",
    "examples/904-faas-financial-analytics",
    "examples/904-faas-financial-analytics/vwfd",
    "examples/905-faas-notification-hub",
    "examples/905-faas-notification-hub/vwfd",
    "examples/906-bench-create-order/vwfd",
    "examples/000-provision-server/vwfd",

    # --- Phase 2 Protocol Crates ---
    "crates/vil_soap",
    "crates/vil_opcua",
    "crates/vil_modbus",
    "crates/vil_ws",

    # --- LSP ---
    "crates/vil_lsp",

    # --- vflow-server (VLB Provisioning Host — licensed separately) ---

    # --- AI Plugins (Process-Oriented) ---
    "crates/vil_llm",
    "crates/vil_rag",
    "crates/vil_agent",
    "crates/vil_tokenizer",
    "crates/vil_llm_proxy",
    "crates/vil_embedder",
    "crates/vil_inference",
    "crates/vil_vectordb",
    "crates/vil_realtime_rag",
    "crates/vil_tensor_shm",
    "crates/vil_speculative",
    "crates/vil_ai_compiler",
    "crates/vil_semantic_router",
    "crates/vil_prompt_shield",
    "crates/vil_context_optimizer",
    "crates/vil_quantized",
    "crates/vil_consensus",
    "crates/vil_memory_graph",
    "crates/vil_feature_store",
    "crates/vil_streaming_rag",
    "crates/vil_ai_gateway",
    "crates/vil_model_serving",
    "crates/vil_multi_agent",
    "crates/vil_chunker",
    "crates/vil_doc_parser",
    "crates/vil_reranker",
    "crates/vil_prompts",
    "crates/vil_llm_cache",
    "crates/vil_doc_layout",
    "crates/vil_guardrails",
    "crates/vil_eval",

    # --- AI Plugins (I01-I10 Process-Oriented) ---
    "crates/vil_crawler",
    "crates/vil_graphrag",
    "crates/vil_audio",
    "crates/vil_vision",
    "crates/vil_sql_agent",
    "crates/vil_doc_extract",
    "crates/vil_workflow_v2",
    "crates/vil_ab_test",
    "crates/vil_cost_tracker",
    "crates/vil_model_registry",

    # --- Phase 5a: Open-Source Enterprise ---
    "crates/vil_otel",
    "crates/vil_edge_deploy",

    # --- AI Plugins (N01-N12 Final Batch) ---
    "crates/vil_data_prep",
    "crates/vil_synthetic",
    "crates/vil_rlhf_data",
    "crates/vil_bench_llm",
    "crates/vil_multimodal",
    "crates/vil_index_updater",
    "crates/vil_federated_rag",
    "crates/vil_private_rag",
    "crates/vil_edge",
    "crates/vil_output_parser",
    "crates/vil_ai_trace",
    "crates/vil_prompt_optimizer",

    # --- Tier 1: Basic (001-026) ---
    "examples/001-basic-ai-gw-demo",
    "examples/002-basic-vilapp-gateway",
    "examples/003-basic-hello-server",
    "examples/004-basic-rest-crud",
    "examples/005-basic-multiservice-mesh-ndjson",
    "examples/006-basic-shm-extractor",
    "examples/007-basic-credit-npl-filter",
    "examples/008-basic-credit-quality-monitor",
    "examples/009-basic-credit-regulatory-slik",
    "examples/010-basic-websocket-chat",
    "examples/011-basic-graphql-api",
    "examples/012-basic-plugin-database",
    "examples/013-basic-nats-worker",
    "examples/014-basic-kafka-stream",
    "examples/015-basic-mqtt-iot-gateway",
    "examples/016-basic-ai-rag-gateway",
    "examples/017-basic-production-fullstack",
    "examples/018-basic-ai-multi-model-router",
    "examples/019-basic-ai-multi-model-advanced",
    "examples/020-basic-ai-ab-testing",
    "examples/021-basic-wasm-faas",
    "examples/022-basic-sidecar-python",
    "examples/023-basic-hybrid-wasm-sidecar",
    "examples/024-basic-llm-chat",
    "examples/025-basic-rag-service",
    "examples/026-basic-ai-agent",
    "examples/027-basic-vilserver-minimal",
    "examples/028-basic-sse-hub-streaming",
    "examples/029-basic-vil-handler-endpoint",
    "examples/030-basic-trilane-messaging",
    "examples/031-basic-mesh-routing",
    "examples/032-basic-failover-ha",
    "examples/033-basic-shm-write-through",
    "examples/034-basic-blocking-task",
    "examples/035-basic-vil-service-module",
    "examples/036-basic-sse-event-builder",
    "examples/037-basic-vilmodel-derive",
    "examples/038-basic-vil-app-dsl",
    "examples/039-basic-observer-dashboard",
    "examples/040-basic-auth-middleware-stack",
    "examples/041-basic-sidecar-failover",
    "examples/042-basic-scripting-sandbox",
    "examples/043-basic-integration-test",
    "examples/044-basic-graphql-subscriptions",
    "examples/045-basic-exec-class-pinned",
    "examples/046-basic-mesh-scatter-gather",
    "examples/047-basic-custom-error-stack",
    "examples/108-workflow-dag-scheduler",
    "examples/308-rag-full-pipeline-ingest-query",
    "examples/407-agent-multi-agent-orchestration",
    "examples/610-storage-multi-cloud",
    "examples/611-db-timeseries-iot",
    "examples/705-protocol-grpc-gateway",
    "examples/706-mq-pulsar-messaging",
    "examples/805-trigger-email",
    "examples/806-trigger-iot",
    "examples/807-trigger-evm-blockchain",
    "examples/001b-vilapp-ai-gw-benchmark",
    "examples/001b-vilapp-ai-gw-benchmark/vwfd",
    # ── VWFD workflow examples (112 total) ──
    "examples/001-basic-ai-gw-demo/vwfd",
    "examples/002-basic-vilapp-gateway/vwfd",
    "examples/003-basic-hello-server/vwfd",
    "examples/004-basic-rest-crud/vwfd",
    "examples/005-basic-multiservice-mesh-ndjson/vwfd",
    "examples/006-basic-shm-extractor/vwfd",
    "examples/007-basic-credit-npl-filter/vwfd",
    "examples/008-basic-credit-quality-monitor/vwfd",
    "examples/009-basic-credit-regulatory-slik/vwfd",
    "examples/010-basic-websocket-chat/vwfd",
    "examples/011-basic-graphql-api/vwfd",
    "examples/012-basic-plugin-database/vwfd",
    "examples/013-basic-nats-worker/vwfd",
    "examples/014-basic-kafka-stream/vwfd",
    "examples/015-basic-mqtt-iot-gateway/vwfd",
    "examples/016-basic-ai-rag-gateway/vwfd",
    "examples/017-basic-production-fullstack/vwfd",
    "examples/018-basic-ai-multi-model-router/vwfd",
    "examples/019-basic-ai-multi-model-advanced/vwfd",
    "examples/020-basic-ai-ab-testing/vwfd",
    "examples/021-basic-wasm-faas/vwfd",
    "examples/022-basic-sidecar-python/vwfd",
    "examples/023-basic-hybrid-wasm-sidecar/vwfd",
    "examples/024-basic-llm-chat/vwfd",
    "examples/025-basic-rag-service/vwfd",
    "examples/026-basic-ai-agent/vwfd",
    "examples/027-basic-vilserver-minimal/vwfd",
    "examples/028-basic-sse-hub-streaming/vwfd",
    "examples/029-basic-vil-handler-endpoint/vwfd",
    "examples/030-basic-trilane-messaging/vwfd",
    "examples/031-basic-mesh-routing/vwfd",
    "examples/032-basic-failover-ha/vwfd",
    "examples/033-basic-shm-write-through/vwfd",
    "examples/034-basic-blocking-task/vwfd",
    "examples/035-basic-vil-service-module/vwfd",
    "examples/036-basic-sse-event-builder/vwfd",
    "examples/037-basic-vilmodel-derive/vwfd",
    "examples/038-basic-vil-app-dsl/vwfd",
    "examples/039-basic-observer-dashboard/vwfd",
    "examples/040-basic-auth-middleware-stack/vwfd",
    "examples/041-basic-sidecar-failover/vwfd",
    "examples/042-basic-scripting-sandbox/vwfd",
    "examples/043-basic-integration-test/vwfd",
    "examples/044-basic-graphql-subscriptions/vwfd",
    "examples/045-basic-exec-class-pinned/vwfd",
    "examples/046-basic-mesh-scatter-gather/vwfd",
    "examples/047-basic-custom-error-stack/vwfd",
    "examples/101-pipeline-3node-transform-chain/vwfd",
    "examples/101b-multi-pipeline-benchmark/vwfd",
    "examples/101c-vilapp-multi-pipeline-benchmark/vwfd",
    "examples/102-pipeline-fanout-scatter/vwfd",
    "examples/103-pipeline-fanin-gather/vwfd",
    "examples/104-pipeline-diamond-topology/vwfd",
    "examples/105-pipeline-multi-workflow/vwfd",
    "examples/106-pipeline-sse-standard-dialect/vwfd",
    "examples/107-pipeline-process-traced/vwfd",
    "examples/108-workflow-dag-scheduler/vwfd",
    "examples/201-llm-basic-chat/vwfd",
    "examples/202-llm-multi-model-routing/vwfd",
    "examples/203-llm-code-review-with-tools/vwfd",
    "examples/204-llm-streaming-translator/vwfd",
    "examples/205-llm-chunked-summarizer/vwfd",
    "examples/206-llm-decision-routing/vwfd",
    "examples/301-rag-basic-vector-search/vwfd",
    "examples/302-rag-multi-source-fanin/vwfd",
    "examples/303-rag-hybrid-exact-semantic/vwfd",
    "examples/304-rag-citation-extraction/vwfd",
    "examples/305-rag-guardrail-pipeline/vwfd",
    "examples/306-rag-ai-event-tracking/vwfd",
    "examples/307-rag-vectordb-knowledge-index/vwfd",
    "examples/308-rag-full-pipeline-ingest-query/vwfd",
    "examples/401-agent-calculator/vwfd",
    "examples/402-agent-http-researcher/vwfd",
    "examples/403-agent-code-file-reviewer/vwfd",
    "examples/404-agent-data-csv-analyst/vwfd",
    "examples/405-agent-react-multi-tool/vwfd",
    "examples/406-agent-vil-handler-shm/vwfd",
    "examples/407-agent-multi-agent-orchestration/vwfd",
    "examples/501-villog-stdout-dev/vwfd",
    "examples/502-villog-file-rolling/vwfd",
    "examples/503-villog-multi-drain/vwfd",
    "examples/504-villog-benchmark-comparison/vwfd",
    "examples/505-villog-tracing-bridge/vwfd",
    "examples/506-villog-structured-events/vwfd",
    "examples/507-villog-bench-file-drain/vwfd",
    "examples/508-villog-bench-multithread/vwfd",
    "examples/509-villog-phase1-integration/vwfd",
    "examples/601-storage-s3-basic/vwfd",
    "examples/602-db-mongo-crud/vwfd",
    "examples/603-db-clickhouse-batch/vwfd",
    "examples/604-db-elastic-search/vwfd",
    "examples/605-db-vilorm-crud/vwfd",
    "examples/606-db-vilorm-ecommerce/vwfd",
    "examples/607-db-vilorm-multitenant/vwfd",
    "examples/608-db-vilorm-analytics/vwfd",
    "examples/609-db-vilorm-overhead-bench/vwfd",
    "examples/610-storage-multi-cloud/vwfd",
    "examples/611-db-timeseries-iot/vwfd",
    "examples/701-mq-rabbitmq-pubsub/vwfd",
    "examples/702-mq-sqs-send-receive/vwfd",
    "examples/703-protocol-soap-client/vwfd",
    "examples/704-protocol-modbus-read/vwfd",
    "examples/705-protocol-grpc-gateway/vwfd",
    "examples/706-mq-pulsar-messaging/vwfd",
    "examples/801-trigger-cron-basic/vwfd",
    "examples/802-trigger-fs-watcher/vwfd",
    "examples/803-trigger-webhook-receiver/vwfd",
    "examples/804-trigger-cdc-postgres/vwfd",
    "examples/805-trigger-email/vwfd",
    "examples/806-trigger-iot/vwfd",
    "examples/807-trigger-evm-blockchain/vwfd",
    "examples/101b-multi-pipeline-benchmark",
    "examples/101c-vilapp-multi-pipeline-benchmark",
    "examples/106-pipeline-sse-standard-dialect",
    "examples/107-pipeline-process-traced",
    "examples/206-llm-decision-routing",
    "examples/306-rag-ai-event-tracking",
    "examples/307-rag-vectordb-knowledge-index",
    "examples/406-agent-vil-handler-shm",
    # --- Tier 2: Pipeline (101-105) ---
    "examples/101-pipeline-3node-transform-chain",
    "examples/102-pipeline-fanout-scatter",
    "examples/103-pipeline-fanin-gather",
    "examples/104-pipeline-diamond-topology",
    "examples/105-pipeline-multi-workflow",
    # --- Tier 3: LLM (201-205) ---
    "examples/201-llm-basic-chat",
    "examples/202-llm-multi-model-routing",
    "examples/203-llm-code-review-with-tools",
    "examples/204-llm-streaming-translator",
    "examples/205-llm-chunked-summarizer",
    # --- Tier 4: RAG (301-305) ---
    "examples/301-rag-basic-vector-search",
    "examples/302-rag-multi-source-fanin",
    "examples/303-rag-hybrid-exact-semantic",
    "examples/304-rag-citation-extraction",
    "examples/305-rag-guardrail-pipeline",
    # --- Tier 5: Agent (401-405) ---
    "examples/401-agent-calculator",
    "examples/402-agent-http-researcher",
    "examples/403-agent-code-file-reviewer",
    "examples/404-agent-data-csv-analyst",
    "examples/405-agent-react-multi-tool",

    # --- Tier 6: VIL Log System (501-506) ---
    "examples/501-villog-stdout-dev",
    "examples/502-villog-file-rolling",
    "examples/503-villog-multi-drain",
    "examples/504-villog-benchmark-comparison",
    "examples/505-villog-tracing-bridge",
    "examples/506-villog-structured-events",
    "examples/507-villog-bench-file-drain",
    "examples/508-villog-bench-multithread",
    "examples/509-villog-phase1-integration",

    # --- Phase 6 Stream 4: Storage / DB / MQ / Protocol / Trigger Examples ---
    "examples/601-storage-s3-basic",
    "examples/602-db-mongo-crud",
    "examples/603-db-clickhouse-batch",
    "examples/604-db-elastic-search",
    "examples/701-mq-rabbitmq-pubsub",
    "examples/702-mq-sqs-send-receive",
    "examples/703-protocol-soap-client",
    "examples/704-protocol-modbus-read",
    "examples/705-protocol-grpc-gateway",
    "examples/801-trigger-cron-basic",
    "examples/802-trigger-fs-watcher",
    "examples/803-trigger-webhook-receiver",
    "examples/804-trigger-cdc-postgres",

    # --- Phase 6 Stream 4: VilORM Examples ---
    "examples/605-db-vilorm-crud",
    "examples/606-db-vilorm-ecommerce",
    "examples/607-db-vilorm-multitenant",
    "examples/608-db-vilorm-analytics",
    "examples/609-db-vilorm-overhead-bench",

    # --- VWFD Runtime (VIL workflow definition) ---
    "crates/vil_expr",
    "crates/vil_rules",
    "crates/vil_starlark",
    "crates/vil_vwfd",
    "crates/vil_vwfd_macros",

    # --- Provisionable Server (Docker default) ---
    "crates/vil_server_provision",
]

# Default build targets: crates only. Examples are still workspace members
# but won't compile unless explicitly requested:
#   cargo build --release -p vil-basic-hello-server
#   cargo build --release --workspace          (builds everything incl. examples)
default-members = [
    # --- Meta-crate ---
    "crates/vil",
    "crates/vil_validate_derive",
    "crates/vil_migrate",
    "crates/vil_orm_derive",
    "crates/vil_orm",

    # --- Core Runtime ---
    "crates/vil_types",
    "crates/vil_shm",
    "crates/vil_queue",
    "crates/vil_log",
    "crates/vil_registry",
    "crates/vil_rt",
    "crates/vil_obs",
    "crates/vil_net",
    "crates/vil_engine",

    # --- Semantic Compiler ---
    "crates/vil_ir",
    "crates/vil_diag",
    "crates/vil_validate",
    "crates/vil_macros",
    "crates/vil_codegen_rust",
    "crates/vil_codegen_c",

    # --- Visualization ---
    "crates/vil_viz",

    # --- Script Runtimes ---
    "crates/vil_script_lua",
    "crates/vil_script_js",

    # --- Tooling ---
    "crates/vil_cli",
    "crates/vil_cli_core",
    "crates/vil_cli_compile",
    "crates/vil_cli_sdk",
    "crates/vil_cli_pipeline",
    "crates/vil_cli_server",
    "crates/vil_new_http",

    # --- Connector Macros ---
    "crates/vil_connector_macros",

    # --- SDK & Extensions ---
    "crates/vil_sdk",
    "crates/vil_plugin_sdk",
    "crates/vil_topo",
    "crates/vil_capsule",
    "crates/vil_sidecar",
    "crates/vil_observer",

    # --- VIL Server ---
    "crates/vil_server_core",
    "crates/vil_server_web",
    "crates/vil_server_config",
    "crates/vil_server_mesh",
    "crates/vil_server_auth",
    "crates/vil_server_db",
    "crates/vil_server_test",
    "crates/vil_server_macros",
    "crates/vil_server",

    # --- Storage Plugins ---
    "crates/vil_storage_s3",
    "crates/vil_storage_gcs",
    "crates/vil_storage_azure",

    # --- Database Plugins ---
    "crates/vil_db_elastic",
    "crates/vil_db_sqlx",
    "crates/vil_db_sea_orm",
    "crates/vil_db_redis",
    "crates/vil_db_mongo",
    "crates/vil_db_clickhouse",
    "crates/vil_db_dynamodb",
    "crates/vil_db_cassandra",
    "crates/vil_db_timeseries",
    "crates/vil_db_neo4j",

    # --- DB Semantic Layer ---
    "crates/vil_db_semantic",
    "crates/vil_db_macros",
    "crates/vil_cache",

    # --- GraphQL + K8s Operator ---
    "crates/vil_graphql",
    "crates/vil_operator",

    # --- JSON Abstraction ---
    "crates/vil_json",

    # --- Protocol + Serialization ---
    "crates/vil_grpc",
    "crates/vil_server_format",
    "crates/vil_mq_kafka",
    "crates/vil_mq_mqtt",
    "crates/vil_mq_nats",
    "crates/vil_mq_rabbitmq",
    "crates/vil_mq_sqs",
    "crates/vil_mq_pulsar",
    "crates/vil_mq_pubsub",

    # --- Phase 3 Trigger Crates ---
    "crates/vil_trigger_core",
    "crates/vil_trigger_cron",
    "crates/vil_trigger_fs",
    "crates/vil_trigger_cdc",
    "crates/vil_trigger_email",
    "crates/vil_trigger_iot",
    "crates/vil_trigger_evm",
    "crates/vil_trigger_webhook",
    "crates/vil_trigger_kafka",
    "crates/vil_trigger_s3",
    "crates/vil_trigger_sftp",
    "crates/vil_trigger_db_poll",
    "crates/vil_trigger_grpc",

    # --- Built-in FaaS Crates (Phase C) ---
    "crates/vil_hash",
    "crates/vil_crypto",
    "crates/vil_jwt",
    "crates/vil_id_gen",
    "crates/vil_datefmt",
    "crates/vil_duration",
    "crates/vil_parse_csv",
    "crates/vil_parse_xml",
    "crates/vil_regex",
    "crates/vil_phone",
    "crates/vil_validate_schema",
    "crates/vil_mask",
    "crates/vil_reshape",
    "crates/vil_template",
    "crates/vil_email_validate",
    "crates/vil_stats",
    "crates/vil_anomaly",
    "crates/vil_email",
    "crates/vil_webhook_out",
    "crates/vil_geodist",

    # --- Phase 2 Protocol Crates ---
    "crates/vil_soap",
    "crates/vil_opcua",
    "crates/vil_modbus",
    "crates/vil_ws",

    # --- LSP ---
    "crates/vil_lsp",

    # --- AI Plugins (Process-Oriented) ---
    "crates/vil_llm",
    "crates/vil_rag",
    "crates/vil_agent",
    "crates/vil_tokenizer",
    "crates/vil_llm_proxy",
    "crates/vil_embedder",
    "crates/vil_inference",
    "crates/vil_vectordb",
    "crates/vil_realtime_rag",
    "crates/vil_tensor_shm",
    "crates/vil_speculative",
    "crates/vil_ai_compiler",
    "crates/vil_semantic_router",
    "crates/vil_prompt_shield",
    "crates/vil_context_optimizer",
    "crates/vil_quantized",
    "crates/vil_consensus",
    "crates/vil_memory_graph",
    "crates/vil_feature_store",
    "crates/vil_streaming_rag",
    "crates/vil_ai_gateway",
    "crates/vil_model_serving",
    "crates/vil_multi_agent",
    "crates/vil_chunker",
    "crates/vil_doc_parser",
    "crates/vil_reranker",
    "crates/vil_prompts",
    "crates/vil_llm_cache",
    "crates/vil_doc_layout",
    "crates/vil_guardrails",
    "crates/vil_eval",

    # --- AI Plugins (I01-I10 Process-Oriented) ---
    "crates/vil_crawler",
    "crates/vil_graphrag",
    "crates/vil_audio",
    "crates/vil_vision",
    "crates/vil_sql_agent",
    "crates/vil_doc_extract",
    "crates/vil_workflow_v2",
    "crates/vil_ab_test",
    "crates/vil_cost_tracker",
    "crates/vil_model_registry",

    # --- Phase 5a: Open-Source Enterprise ---
    "crates/vil_otel",
    "crates/vil_edge_deploy",

    # --- AI Plugins (N01-N12 Final Batch) ---
    "crates/vil_data_prep",
    "crates/vil_synthetic",
    "crates/vil_rlhf_data",
    "crates/vil_bench_llm",
    "crates/vil_multimodal",
    "crates/vil_index_updater",
    "crates/vil_federated_rag",
    "crates/vil_private_rag",
    "crates/vil_edge",
    "crates/vil_output_parser",
    "crates/vil_ai_trace",
    "crates/vil_prompt_optimizer",

    # --- VWFD Runtime ---
    "crates/vil_expr",
    "crates/vil_rules",
    "crates/vil_starlark",
    "crates/vil_vwfd",
    "crates/vil_vwfd_macros",

    # --- Provisionable Server ---
    "crates/vil_server_provision",
]

[workspace.package]
edition = "2021"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["VIL Community"]
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"
readme = "README.md"
keywords = ["vil", "process-oriented", "zero-copy", "pipeline", "rust"]
categories = ["network-programming", "web-programming", "asynchronous"]

[workspace.dependencies]
# Core runtime
vil_types        = { version = "0.4", path = "crates/vil_types" }
vil_shm          = { version = "0.4", path = "crates/vil_shm" }
vil_queue        = { version = "0.4", path = "crates/vil_queue" }
vil_log          = { version = "0.4", path = "crates/vil_log" }
vil_registry     = { version = "0.4", path = "crates/vil_registry" }
vil_rt           = { version = "0.4", path = "crates/vil_rt" }
vil_obs          = { version = "0.4", path = "crates/vil_obs" }
vil_net          = { version = "0.4", path = "crates/vil_net" }
vil_engine       = { version = "0.4", path = "crates/vil_engine" }

# Semantic compiler
vil_ir           = { version = "0.4", path = "crates/vil_ir" }
vil_diag         = { version = "0.4", path = "crates/vil_diag" }
vil_validate     = { version = "0.4", path = "crates/vil_validate" }
vil_macros       = { version = "0.4", path = "crates/vil_macros" }
vil_connector_macros = { version = "0.4", path = "crates/vil_connector_macros" }
vil_codegen_rust = { version = "0.4", path = "crates/vil_codegen_rust" }
vil_codegen_c    = { version = "0.4", path = "crates/vil_codegen_c" }

# Tooling
vil_cli          = { version = "0.4", path = "crates/vil_cli" }
vil_ffi          = { version = "0.4", path = "crates/vil_ffi" }
vil_new_http     = { version = "0.4", path = "crates/vil_new_http" }

# Storage plugins
vil_storage_s3     = { version = "0.4", path = "crates/vil_storage_s3" }
vil_storage_gcs    = { version = "0.4", path = "crates/vil_storage_gcs" }
vil_storage_azure  = { version = "0.4", path = "crates/vil_storage_azure" }

# Elasticsearch plugin
vil_db_elastic     = { version = "0.4", path = "crates/vil_db_elastic" }

# Phase 1 Database Plugins
vil_db_mongo       = { version = "0.4", path = "crates/vil_db_mongo" }
vil_db_clickhouse  = { version = "0.4", path = "crates/vil_db_clickhouse" }
vil_db_dynamodb    = { version = "0.4", path = "crates/vil_db_dynamodb" }
vil_db_cassandra   = { version = "0.4", path = "crates/vil_db_cassandra" }
vil_db_timeseries  = { version = "0.4", path = "crates/vil_db_timeseries" }
vil_db_neo4j       = { version = "0.4", path = "crates/vil_db_neo4j" }

# SDK & extensions
vil_sdk          = { version = "0.4", path = "crates/vil_sdk" }
vil_topo         = { version = "0.4", path = "crates/vil_topo" }
vil_capsule      = { version = "0.4", path = "crates/vil_capsule" }

# VIL Server
vil_server       = { version = "0.4", path = "crates/vil_server" }
vil_server_core  = { version = "0.4", path = "crates/vil_server_core" }
vil_server_web   = { version = "0.4", path = "crates/vil_server_web" }
vil_server_config = { version = "0.4", path = "crates/vil_server_config" }
vil_server_mesh  = { version = "0.4", path = "crates/vil_server_mesh" }
vil_server_auth  = { version = "0.4", path = "crates/vil_server_auth" }
vil_server_db    = { version = "0.4", path = "crates/vil_server_db" }
vil_server_test  = { version = "0.4", path = "crates/vil_server_test" }
vil_server_macros = { version = "0.4", path = "crates/vil_server_macros" }

# Phase 2 MQ Plugins
vil_mq_rabbitmq    = { version = "0.4", path = "crates/vil_mq_rabbitmq" }
vil_mq_sqs         = { version = "0.4", path = "crates/vil_mq_sqs" }
vil_mq_pulsar      = { version = "0.4", path = "crates/vil_mq_pulsar" }
vil_mq_pubsub      = { version = "0.4", path = "crates/vil_mq_pubsub" }

# Phase 3 Trigger Crates
vil_trigger_core    = { version = "0.4", path = "crates/vil_trigger_core" }
vil_trigger_cron    = { version = "0.4", path = "crates/vil_trigger_cron" }
vil_trigger_fs      = { version = "0.4", path = "crates/vil_trigger_fs" }
vil_trigger_cdc     = { version = "0.4", path = "crates/vil_trigger_cdc" }
vil_trigger_email   = { version = "0.4", path = "crates/vil_trigger_email" }
vil_trigger_iot     = { version = "0.4", path = "crates/vil_trigger_iot" }
vil_trigger_evm     = { version = "0.4", path = "crates/vil_trigger_evm" }
vil_trigger_webhook = { version = "0.4", path = "crates/vil_trigger_webhook" }
vil_trigger_kafka   = { version = "0.4", path = "crates/vil_trigger_kafka" }
vil_trigger_s3      = { version = "0.4", path = "crates/vil_trigger_s3" }
vil_trigger_sftp    = { version = "0.4", path = "crates/vil_trigger_sftp" }
vil_trigger_db_poll = { version = "0.4", path = "crates/vil_trigger_db_poll" }
vil_trigger_grpc    = { version = "0.4", path = "crates/vil_trigger_grpc" }

# Phase 2 Protocol Crates
vil_soap           = { version = "0.4", path = "crates/vil_soap" }
vil_opcua          = { version = "0.4", path = "crates/vil_opcua" }
vil_modbus         = { version = "0.4", path = "crates/vil_modbus" }
vil_ws             = { version = "0.4", path = "crates/vil_ws" }


# Phase 5a: Open-Source Enterprise
vil_otel          = { version = "0.4", path = "crates/vil_otel" }
vil_edge_deploy   = { version = "0.4", path = "crates/vil_edge_deploy" }

# Common dependencies
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_yaml         = "0.9"
dashmap            = "5.5"
memmap2            = "0.9"
nix                = { version = "0.27", features = ["fs", "mman", "event"] }
tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.7", features = ["macros"] }
tower              = { version = "0.4" }
tower-http         = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit", "fs"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait        = "0.1"
futures-util       = "0.3"

# =============================================================================
# Release Profile — Optimized for community distribution
# =============================================================================
[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 16
debug           = false
overflow-checks = false

# =============================================================================
# Dev Profile — For local development
# =============================================================================
[profile.dev]
opt-level       = 0
debug           = true
