[package]
name = "vil_db_clickhouse"
description = "VIL Database Plugin — ClickHouse OLAP with batch INSERT and semantic logging"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_log              = { workspace = true }
tracing = { workspace = true }
vil_connector_macros = { workspace = true }
clickhouse = { version = "0.12", features = ["inserter"] }
tokio = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
