[package]
name = "vil_db_dynamodb"
description = "VIL Database Plugin — AWS DynamoDB with semantic logging"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_log              = { workspace = true }
tracing = { workspace = true }
vil_connector_macros = { workspace = true }
tokio            = { workspace = true }
serde            = { workspace = true }
aws-sdk-dynamodb = "1.55"
aws-config       = { version = "1.5", features = ["behavior-version-latest"] }

[dev-dependencies]
serde_json = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
