[package]
name = "vil_db_elastic"
description = "VIL Database Plugin — Elasticsearch / OpenSearch"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_log              = { workspace = true }
tracing = { workspace = true }
vil_connector_macros = { workspace = true }
elasticsearch   = "8.15.0-alpha.1"
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = "1.0"
bytes           = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
