[package]
name = "vil_db_mongo"
description = "VIL Database Plugin — MongoDB with semantic logging and Tri-Lane bridge"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_log              = { workspace = true }
tracing = { workspace = true }
vil_connector_macros = { workspace = true }
mongodb = { version = "3.1" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bson = "2.13"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
