[package]
name = "vil_db_neo4j"
description = "VIL Database Plugin — Neo4j graph database with semantic logging"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_log              = { workspace = true }
tracing = { workspace = true }
vil_connector_macros = { workspace = true }
tokio   = { workspace = true }
serde   = { workspace = true }
neo4rs  = "0.8"

[dev-dependencies]
serde_json = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
