[package]
name = "vil_expr"
version.workspace = true
edition = "2021"
description = "VIL Expression Evaluator (VIL Expression compatible) — path access, concat, compare, JSON templates"
license = "MIT OR Apache-2.0"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"

# V-CEL core surface (H2): non-optional so the DEFAULT build has a working
# matches()/timestamp()/duration()/base64 path (the bench gate builds default
# features). Richer FaaS variants stay behind the faas-* features below.
regex = "1"
chrono = "0.4"
chrono-tz = "0.8"
base64 = "0.22"

# Built-in FaaS (all optional, feature-gated)
vil_hash = { version = "0.4", path = "../vil_hash", optional = true }
vil_crypto = { version = "0.4", path = "../vil_crypto", optional = true }
vil_jwt = { version = "0.4", path = "../vil_jwt", optional = true }
vil_id_gen = { version = "0.4", path = "../vil_id_gen", optional = true }
vil_datefmt = { version = "0.4", path = "../vil_datefmt", optional = true }
vil_duration = { version = "0.4", path = "../vil_duration", optional = true }
vil_parse_csv = { version = "0.4", path = "../vil_parse_csv", optional = true }
vil_parse_xml = { version = "0.4", path = "../vil_parse_xml", optional = true }
vil_regex = { version = "0.4", path = "../vil_regex", optional = true }
vil_phone = { version = "0.4", path = "../vil_phone", optional = true }
vil_validate_schema = { version = "0.4", path = "../vil_validate_schema", optional = true }
vil_mask = { version = "0.4", path = "../vil_mask", optional = true }
vil_reshape = { version = "0.4", path = "../vil_reshape", optional = true }
vil_template = { version = "0.4", path = "../vil_template", optional = true }
vil_email_validate = { version = "0.4", path = "../vil_email_validate", optional = true }
vil_stats = { version = "0.4", path = "../vil_stats", optional = true }
vil_anomaly = { version = "0.4", path = "../vil_anomaly", optional = true }
vil_email = { version = "0.4", path = "../vil_email", optional = true }
vil_webhook_out = { version = "0.4", path = "../vil_webhook_out", optional = true }
vil_geodist = { version = "0.4", path = "../vil_geodist", optional = true }

[features]
default = []
faas-core = [
    "dep:vil_hash", "dep:vil_crypto", "dep:vil_jwt", "dep:vil_id_gen",
    "dep:vil_datefmt", "dep:vil_duration",
    "dep:vil_parse_csv", "dep:vil_parse_xml",
    "dep:vil_regex", "dep:vil_phone",
]
faas-full = [
    "faas-core",
    "dep:vil_validate_schema", "dep:vil_mask", "dep:vil_reshape",
    "dep:vil_template", "dep:vil_email_validate",
    "dep:vil_stats", "dep:vil_anomaly",
    "dep:vil_email", "dep:vil_webhook_out", "dep:vil_geodist",
]

[dev-dependencies]
serde_json = "1.0"

criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "expr_eval"
harness = false
