[package]
name = "vil_mq_pubsub"
version.workspace = true
edition.workspace = true
description = "VIL Google Cloud Pub/Sub Adapter — publish and subscribe with semantic log integration"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_log                    = { workspace = true }
tracing = { workspace = true }
vil_connector_macros       = { workspace = true }
tokio                      = { version = "1", features = ["full"] }
google-cloud-pubsub        = "0.25"
google-cloud-googleapis    = { version = "0.13", features = ["pubsub"] }
google-cloud-default       = { version = "0.4", features = ["pubsub"] }
async-trait                = "0.1"
serde                      = { version = "1.0", features = ["derive"] }
bytes                      = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
