[package]
name = "vil_mq_rabbitmq"
version.workspace = true
edition.workspace = true
description = "VIL RabbitMQ Adapter — AMQP publish/consume with Tri-Lane bridge"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_log              = { workspace = true }
tracing = { workspace = true }
vil_connector_macros = { workspace = true }
tokio          = { version = "1", features = ["full"] }
lapin          = "2.5"
async-trait    = "0.1"
serde          = { version = "1.0", features = ["derive"] }
bytes          = "1.0"
futures        = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
bytes = "1"
