[package]
name = "vil_starlark"
version.workspace = true
edition = "2021"
description = "VIL Compute engine — spec-pure Starlark evaluation (starlark-rust) for VWFD Compute activities. Source-available under VSAL."
license-file = "../../LICENSE-VSAL"
publish = false

[dependencies]
starlark = "0.14"
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "starlark_bridge"
harness = false
